# curss

./: .gitignore  Cargo.toml  README.md  mprocs.yaml
curss/: Cargo.toml
curss/src/: cli.rs  main.rs
curss_client/: .gitignore  Cargo.toml  Dioxus.toml  index.html  tailwind.config.js
curss_client/src/: main.rs
curss_server/: Cargo.toml
curss_server/src/: api.rs  lib.rs
