[package]
name = "curss_client"
version = "0.0.1"
# authors.workspace = true
edition = "2021"
# description.workspace = true
# readme.workspace = true
repository = "https://github.com/k9withabone/curss/tree/main/curss_client"
# license.workspace = true
# keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3"
dioxus-web = "0.3"

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
